k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nest-app
  namespace: app
spec:
  selector:
    app: nest-app
  ports:
    - port: 80
      targetPort: 3001
  type: ClusterIP
